updated baseurl to fix css

--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -14,7 +14,7 @@
     <div class="site-nav-right">
         <div class="social-links">
             {% if site.facebook %}
-                <a class="social-link social-link-fb" href="https://facebook.com/{{ site.facebook }}" target="_blank" rel="noopener">{% include facebook.html %}</a>
+                <a class="social-link social-link-ig" href="https://www.instagram.com/{{ site.instagram }}" target="_blank" rel="noopener">{% include instagram.html %}</a>
             {% endif %}
             {% if site.twitter %}
                 <a class="social-link social-link-tw" href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">{% include twitter.html %}</a>
