--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -308,7 +308,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     fill: #fff;
 }
 
-.social-link-fb svg {
+.social-link-ig img {
     height: 1.5rem;
 }
 
