--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -39,8 +39,8 @@ logo: 'assets/images/ghost.png'
                     {% if author[1].twitter %}
                         <a class="social-link social-link-tw" href="https://twitter.com/{{ author[1].twitter }}" target="_blank" rel="noopener">{% include twitter.html %}</a>
                     {% endif %}
-                    {% if author[1].facebook %}
-                        <a class="social-link social-link-fb" href="https://facebook.com/{{ author[1].facebook }}" target="_blank" rel="noopener">{% include facebook.html %}</a>
+                    {% if author[1].instagram %}
+                        <a class="social-link social-link-instagram" href="https://www.instagram.com/{{ author[1].instagram }}" target="_blank" rel="noopener">{% include instagram.html %}</a>
                     {% endif %}
                     <a class="social-link social-link-rss" href="http://cloud.feedly.com/#subscription/feed/{{ site.url }}{{ site.baseurl }}author/{{ page.author }}/feed.xml" target="_blank" rel="noopener">{% include rss.html %}</a>
                 </div>
