add tumblr url. remove ghost link.

--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -13,7 +13,7 @@
     </div>
     <div class="site-nav-right">
         <div class="social-links">
-            {% if site.facebook %}
+            {% if site.instagram %}
                 <a class="social-link social-link-ig" href="https://www.instagram.com/{{ site.instagram }}" target="_blank" rel="noopener">{% include instagram.html %}</a>
             {% endif %}
             {% if site.twitter %}
