--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,9 +52,8 @@
                     <a href="https://github.com/myJekyll/jasper2">Jasper2</a></section>
                 <nav class="site-footer-nav">
                     <a href="{{ site.baseurl }}">Latest Posts</a>
-                    {% if site.instagram %}<a href="https://facebook.com/{{ site.facebook }}" target="_blank" rel="noopener">Facebook</a>{% endif %}
+                    {% if site.tumblr %}<a href="https://{{ site.tumblr }}.tumblr.com/" target="_blank" rel="noopener">Tumblr</a>{% endif %}
                     {% if site.twitter %}<a href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">Twitter</a>{% endif %}
-                    <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a>
                 </nav>
             </div>
         </footer>
