--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -4,7 +4,7 @@
             {% if site.logo %}
                 <a class="site-nav-logo" href="{{ site.url }}{{ site.baseurl }}"><img src="{{ site.baseurl}}{{ site.logo }}" alt="{{ site.title }}" /></a>
             {% else %}
-                <a class="site-nav-logo" href="{{ site.url }}">{{ site.title }}</a>
+                <a class="site-nav-logo" href="{{ site.url }}">&lt;candicodeit /&gt;</a>
             {% endif %}
         {% endif %}
         {% if page.navigation %}
@@ -13,6 +13,9 @@
     </div>
     <div class="site-nav-right">
         <div class="social-links">
+            {% if site.github %}
+                <a class="social-link social-link-gh" href="https://github.com/{{ site.github }}" target="_blank" rel="noopener">{% include github.html %}</a>
+            {% endif %}
             {% if site.instagram %}
                 <a class="social-link social-link-ig" href="https://www.instagram.com/{{ site.instagram }}" target="_blank" rel="noopener">{% include instagram.html %}</a>
             {% endif %}
