add goodreads link

--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -22,6 +22,9 @@
             {% if site.twitter %}
                 <a class="social-link social-link-tw" href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">{% include twitter.html %}</a>
             {% endif %}
+            {% if site.goodreads %}
+                <a class="social-link social-link-gr" href="https://twitter.com/{{ site.goodreads }}" target="_blank" rel="noopener">{% include goodreads.html %}</a>
+            {% endif %}
         </div>
         {% if site.subscribers %}
             <a class="subscribe-button" href="#subscribe">Subscribe</a>
