--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
     <!-- Styles'n'Scripts -->
     <link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway" rel="stylesheet">
     
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}assets/built/screen.css" />
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}assets/built/screen.edited.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/built/screen.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/built/screen.edited.css" />
     <!-- highlight.js -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/styles/default.min.css">
     <style>.hljs { background: none; }</style>
