--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -11,7 +11,7 @@
                     <h2 class="post-card-title">{{ post.title }}</h2>
                 </header>
                 <section class="post-card-excerpt">
-                    <p>{{ post.content | strip_html | truncatewords: 33, "" }}</p>
+                    <p>{{ post.content | strip_html | truncatewords: 33, "..." }}</p>
                 </section>
             </a>
             <footer class="post-card-meta">
@@ -29,9 +29,9 @@
                 {% if post.tags.size > 0 %}
                     {% for tag in post.tags %}
                         {% if forloop.index == post.tags.size %}
-                            <span class="post-card-tags">{{ tag | capitalize }}</span>
+                            <span class="post-card-tags">{{ tag }}</span>
                         {% else %}
-                           <span class="post-card-tags">{{ tag | capitalize }}</span>
+                           <span class="post-card-tags">{{ tag }}</span>
                         {% endif %}
                     {% endfor %}
                 {% endif %}
