removed unused logic

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,7 +10,7 @@ disqus: false
 into the {body} of the default.hbs template -->
 
 <!-- The big featured header, it uses blog cover image as a BG if available -->
-<header class="site-header outer" {% if cover %}" style="background-image: url({{ site.baseurl }}{% if cover %}{{ cover }}{% endif%})">
+<header class="site-header outer"{% if cover %} style="background-image: url({{ site.baseurl }}{{ cover }})"{% endif%}>
     <div class="inner">
         {% include site-nav.html %}
     </div>
