--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
 <ul class="nav" role="menu">
-    <li class="nav-home" role="menuitem"><a href="/">Home</a></li>
-    <li class="nav-about" role="menuitem"><a href="/about/">About</a></li>
+    <li class="nav-home" role="menuitem"><a href="/">home</a></li>
+    <li class="nav-about" role="menuitem"><a href="/about/">about</a></li>
 </ul>
